# fin-pilot-ml

./: LICENSE  README.md  model_evaluation.py  pylintrc  pyproject.toml
artifacts/: forecaster.pkl
artifacts/categorizing/evaluation/: metrics.json
artifacts/evaluation/: holt_winters_metrics.json  pipeline_metadata.json  sarima_metrics.json  summary.json
artifacts/forecasting/evaluation/: holt_winters_metrics.json  sarima_metrics.json  summary.json
artifacts/models/: holt_winters.pkl
configs/: base.yaml  categorizer.yaml  forecaster.yaml
fin_pilot_ml/categorizing/: config.py  data_loader.py  evaluator.py  model.py  persistence.py  plots.py  schemas.py  train.py
fin_pilot_ml/forecasting/: config.py  data_loader.py  evaluator.py  models.py  persistence.py  plots.py  preprocessing.py  schemas.py  train.py  tuner.py
ml/: config.py
ml/categorizer/: data_loader.py  evaluator.py  model.py  trainer.py
ml/forecaster/: data_loader.py  evaluator.py  model.py  preprocessing.py  trainer.py
src/fin_pilot_ml/: config.py
src/fin_pilot_ml/categorizer/: data_loader.py  evaluator.py  model.py  trainer.py
src/fin_pilot_ml/forecaster/: data_loader.py  evaluator.py  model.py  preprocessing.py  trainer.py
