[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fin-pilot-ml"
version = "1.0.0"
description = "ML pipelines for transaction categorization and SARIMA-based expense forecasting"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Oleksii Palamarchuk", email = "oleksiypalamarchuck@gmail.com" },
]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "statsmodels",
    "pmdarima",
    "joblib",
    "pyarrow",
    "datasets",
    "kagglehub",
    "pydantic",
    "seaborn",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["black", "pylint"]

[tool.black]
line-length = 80
skip-string-normalization = false

[tool.setuptools.packages.find]
include = ["ml*"]

[project.scripts]
train-categorizer = "ml.categorizer.trainer:main"
train-forecaster = "ml.forecaster.trainer:main"
